--- a/transport/contact.html
+++ b/transport/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Online Art Gallery</title>
+  <title>college transport</title>
   <link rel="icon" sizes="114x114" href="image/apple-icon-76x76.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -86,7 +86,7 @@
 <div class="container-fluid" style="background-color: #ADD8E6; height: 360px" >
     
 <section class="contact-wrap">
-  <form action="mailto:2019pietcsrajnish132@poornima.org" class="contact-form" method="post">
+  <form  action="contact.php" class="contact-form" method="POST">
     <div class="col-sm-6">
       <div class="input-block">
         <label for="">First Name</label>
@@ -118,7 +118,7 @@
       </div>
     </div>
     <div class="col-sm-12"><br>
-      <button type="btn" class="square-button">Send</button>
+      <button type="submit" class="square-button">Send</button>
     </div>
   </form>
 </section>
