--- a/transport/login.html
+++ b/transport/login.html
@@ -45,7 +45,7 @@
 </nav>
 <div class="login-box">
   <h1>Login</h1>
-  <form>
+  <form action="login.php" method="POST">
     <div class="textbox">
       <i class="fa fa-user" aria-hidden="true"></i>
       <input type="email" placeholder="Username" name="email" value="" required>
